[project]
line-length = "120"

[tool.pylint.format]
max-line-length = "120"
indent-string="    "

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pyright]

[tool.poetry]
name = 'Hyperdrive Expectations'
version = '0.1.0'
description = 'shows how market participants create the market expectation'
authors = ['Mihai Cosma']
[tool.poetry.dependencies]
matplotlib
numpy
streamlit