[project]
line-length = "120"

[tool.pylint.format]
max-line-length = "120"
indent-string="    "

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pyright]

[tool.poetry]
name = 'Hyperdrive Expectations'
version = '0.1.0'
description = 'shows how market participants create the market expectation'
authors = ['Mihai Cosma']

[tool.poetry.dependencies]
python = '^3.10'
numpy = '^1.21.2'
matplotlib = '^3.4.3'
streamlit = '^1.2'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"